--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,5 @@
 <template>
-  <h1>${message}</h1>
+  <require from="./resources/elements/monaco-editor/monaco-editor"></require>
+
+  <monaco-editor />
 </template>
