--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <template>
   <require from="./resources/elements/monaco-editor/monaco-editor"></require>
 
-  <monaco-editor />
+  <div style="height: 500px;"><monaco-editor /></div>
 </template>
