--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="bootstrap/css/bootstrap.css"></require>
   <require from="./resources/elements/monaco-editor/monaco-editor"></require>
 
   <div style="height: 500px;"><monaco-editor /></div>
