--- a/src/app.html
+++ b/src/app.html
@@ -2,5 +2,5 @@
   <require from="bootstrap/css/bootstrap.css"></require>
   <require from="./resources/elements/monaco-editor/monaco-editor"></require>
 
-  <div style="height: 500px;"><monaco-editor /></div>
+  <div style="height: 500px;"><monaco-editor></monaco-editor></div>
 </template>
