--- a/src/resources/elements/monaco-editor/editor-controller.html
+++ b/src/resources/elements/monaco-editor/editor-controller.html
@@ -8,12 +8,14 @@
         class="btn btn-outline-dark editor-controller-button oi oi-media-step-backward"
         data-action="first"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.first"
       ></button>
       <button
         type="button"
         class="btn btn-outline-dark editor-controller-button oi oi-media-skip-backward"
         data-action="previous"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.previous"
       ></button>
       <button
         type="button"
@@ -22,6 +24,7 @@
         data-toggle="button"
         data-action="rplay"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.rplay"
       ></button>
       <button
         type="button"
@@ -29,6 +32,7 @@
         data-toggle="button"
         data-action="pause"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.pause"
       ></button>
       <button
         type="button"
@@ -36,18 +40,21 @@
         data-toggle="button"
         data-action="play"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.play"
       ></button>
       <button
         type="button"
         class="btn btn-outline-dark editor-controller-button oi oi-media-skip-forward"
         data-action="next"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.next"
       ></button>
       <button
         type="button"
         class="btn btn-outline-dark editor-controller-button oi oi-media-step-forward"
         data-action="last"
         click.trigger="do($event)"
+        disabled.bind="!controlStates.last"
       ></button>
     </div>
     <div id="editor-controller-counters">
@@ -70,20 +77,21 @@
             <input
               type="checkbox"
               class="custom-control-input"
-              id="customSwitch1"
+              id="settings-timely"
+              checked.bind="settingsTimely"
             />
-            <label class="custom-control-label" for="customSwitch1"
+            <label class="custom-control-label" for="settings-timely"
               >χρονολογημένα</label
             >
           </div>
           <div class="form-group">
-            <label for="total-time">σύνολο</label>
+            <label for="settings-play-limit">σύνολο</label>
             <input
               type="number"
               class="form-control"
-              id="total-time"
-              aria-describedby="total-time"
-              placeholder="4"
+              id="settings-play-limit"
+              aria-describedby="settings-play-limit"
+              value.bind="settingsPlayLimit"
             />
           </div>
         </div>
