--- a/src/resources/elements/monaco-editor/monaco-editor.html
+++ b/src/resources/elements/monaco-editor/monaco-editor.html
@@ -3,7 +3,14 @@
   <require from="./monaco-editor.css"></require>
 
   <div id="editor-top-container">
-    <editor-controller do-action.call="doAction(action)"></editor-controller>
+    <editor-controller
+      do-action.call="doAction(action)"
+      changes-counter.bind="changesCounter"
+      changes-total.bind="changesTotal"
+      settings-timely.bind="settingsTimely"
+      settings-play-limit.bind="settingsPlayLimit"
+      control-states.bind="controlStates"
+    ></editor-controller>
     <div id="editor-host-container" ref="editorHostContainer"></div>
   </div>
 </template>
