--- a/src/app.html
+++ b/src/app.html
@@ -2,5 +2,7 @@
   <require from="bootstrap/css/bootstrap.css"></require>
   <require from="./resources/elements/monaco-editor/monaco-editor"></require>
 
-  <div style="height: 500px;"><monaco-editor></monaco-editor></div>
+  <div style="height: 500px;">
+    <monaco-editor changes.bind="changes"></monaco-editor>
+  </div>
 </template>
