--- a/src/resources/elements/monaco-editor/monaco-editor.html
+++ b/src/resources/elements/monaco-editor/monaco-editor.html
@@ -5,7 +5,7 @@
   <div id="editor-top-container">
     <editor-controller
       do-action.call="doAction(action, counter)"
-      changes-total.bind="changesTotal"
+      changes.bind="changes"
     ></editor-controller>
     <div id="editor-host-container" ref="editorHostContainer"></div>
   </div>
