--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body aurelia-app="main">
     <script
-      src="scripts/vendor-bundle-c2d444197e.js"
+      src="scripts/vendor-bundle.js"
       data-main="aurelia-bootstrapper"
     ></script>
   </body>
